src/containers/containers.module.css
.LoginContainer {
  width: 40%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Montserrat', sans-serif;
}

.LoginBox {

  width: 100%;
  height: 60%;
  background-color: #EAF4F4;
  display: flex;
  justify-content: center;
  align-items: center;
}

.Image {
  height: 100%;
}

.HomeContainer {
  background-color: #EAF4F4;
  width: 100%;
  min-height: 100vh;
}

.MainFormation {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(13, 40px);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.contentContainer {
  margin: 0 auto;
  width: 70%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  grid-area: 2 / 1 / 15 / 2;
}

.CommentInput {
  width: 100%;
  margin-bottom: 5px;
  margin-top: 5px;
}

